// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating a Python:react-apollo snippet should generate the correct mutation snippet 1`] = `
Object {
  "options": Object {},
  "snippet": "

from graphqlclient import GraphQLClient

serverUrl = 'https://api.myservice.com/'
client = GraphQLClient(serverUrl)



data = client.execute('''

mutation testMutation {
  addData(id: \\"id\\") {
    id
  }
}
''', {})

print(data)
",
}
`;

exports[`Generating a Python:react-apollo snippet should generate the correct query snippet 1`] = `
Object {
  "options": Object {},
  "snippet": "

from graphqlclient import GraphQLClient

serverUrl = 'https://api.myservice.com/'
client = GraphQLClient(serverUrl)



data = client.execute('''

query testQuery {
  someData {
    id
  }
}

''', {})

print(data)
",
}
`;
